--- a/hugo.toml
+++ b/hugo.toml
@@ -27,6 +27,7 @@ enableRobotsTXT = true  # Für die coole SEO
     [languages.de.params]
         madeWith = "Gemacht mit [Bear Cub](https://github.com/clente/hugo-bearcub)"
         dateFormat = "02.01.2006"
+        privacyNotice = "[Datenschutzerklärung](https://chriscomputing.de/blog/datenschutz/)"
 
     [languages.en]
     title = "Blog from chriscomputing"
@@ -36,6 +37,7 @@ enableRobotsTXT = true  # Für die coole SEO
     [languages.en.params]
         madeWith = "Made with [Bear Cub](https://github.com/clente/hugo-bearcub)"
         dateFormat = "2006-01-02"
+        privacyNotice = "[Privacy Notice](https://chriscomputing.de/blog/datenschutz/)"
 
 # Theme parameters
 [params]
